# redistricting-diffusion-model

./: README.md  pyproject.toml  qp_parameter_tuning.py  requirements.txt
diffusion_model/: plots.py
diffusion_model/notebooks/: grid.ipynb  main.ipynb
experiments/: fiber_5x5.py
legacy/: qp_boundary_visualisation.py  qp_fast_sweep.py
legacy/diffusion_model/: gerrychain_four_way.py  qp_model.py
legacy/diffusion_model/notebooks/: grid.ipynb
outputs/fiber_5x5/: full_fiber_metrics.csv  full_fiber_summary.json  metrics.csv  summary.json
redistricting_diffusion_model/: __init__.py  dataset.py  features.py  fiber.py  grid.py  laplacian.py  metrics.py  plots.py  qp.py  visualization.py
redistricting_diffusion_model/modeling/: predict.py  train.py
