[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "redistricting_diffusion_model"
version = "0.0.1"
description = "A Laplacian diffusion model for political redistricting."
authors = [
  { name = "kirtisoglu and algorithmicprogrammer" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.11,<3.13"


[tool.ruff]
line-length = 99
src = ["redistricting_diffusion_model"]
include = ["pyproject.toml", "redistricting_diffusion_model/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["redistricting_diffusion_model"]
force-sort-within-sections = true

